--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -2,18 +2,18 @@
 // * Created by joelb on 6/3/2015.
 // */
 var app = angular.module('myApp', ['ngRoute']);
+app.run(function($rootScope) {
+    $rootScope.currentUser = $(".chat-container").attr("current-user");
+    console.log("current user id: ", $rootScope.currentUser);
+})
 
 //routes
 app.config(['$routeProvider',
     function ($routeProvider) {
         $routeProvider.
-                when('/all_todos', {
-                    templateUrl: "/assets/all_todos.html",
-                    controller: 'TodosCtrl'
-                }).
-                when('/edit/:id', {
-                    templateUrl: "/assets/edit.html",
-                    controller: "EditCtrl"
+                when('/', {
+                    templateUrl: "/assets/main_chat.html",
+                    controller: 'ChatCtrl'
                 }).
                 when('/new', {
                     templateUrl: "/assets/new.html",
@@ -23,25 +23,15 @@ app.config(['$routeProvider',
     }]);
 
 //controllers
-app.controller('NewCtrl', ['$scope', 'todos', function ($scope, todos) {
-    $scope.newTodo = {"text": ""};
-    $scope.submitNewTodo = function () {
-        todos.create({"todo": $scope.newTodo.text});
+app.controller('NewCtrl', ['$scope', 'chatService', function ($scope, chatService) {
+    $scope.newMessage = {"text": ""};
+    $scope.submitNewMessage = function () {
+        chatService.create({"message": $scope.newMessage.text});
     };
+}]);
 
-
-}]).controller('EditCtrl', ['$scope', 'todos', '$routeParams', function($scope, todos, $routeParams){
-    console.log("id is :", $routeParams);
-    $scope.id = $routeParams.id;
-
-    $scope.edit = function() {
-        todos.edit($scope, $scope.id);
-    }
-    todos.show($scope, $routeParams.id);
-}])
-
-app.controller("TodosCtrl", ['$scope', 'todos', function ($scope, todos) {
-    todos.index($scope);
+app.controller("ChatCtrl", ['$scope', 'chatService', function ($scope, chatService) {
+    chatService.index($scope);
 }]);
 
 //constants
@@ -51,34 +41,33 @@ app.constant("myConfig", {
 
 //services
 
-app.factory('todos', ['$q', '$http', 'myConfig', function ($q, $http, myConfig) {
+app.factory('chatService', ['$q', '$http', 'myConfig', function ($q, $http, myConfig) {
 
     return {
         index: function (scope) {
-            $http.get(myConfig.api + "todos").then(function (res) {
+            $http.get(myConfig.api + "messages").then(function (res) {
                 console.log(res);
-                scope.allTodos = res['data'];
+                scope.allMessages = res['data'];
             }, function (res) {
                 alert("call failed", res);
             });
         },
-        create: function (todo) {
-            $http.post(myConfig.api + "todos", todo);
+        create: function (message) {
+            $http.post(myConfig.api + "messages", message);
         },
         show: function(scope, id) {
-            $http.get(myConfig.api + "todos/" + id)
+            $http.get(myConfig.api + "messages/" + id)
                     .then(function(res){
-                        scope.todo = res['data'];
+                        scope.message = res['data'];
                     },function(res){
                         alert("call failed", res);
                     });
         },
         edit: function(scope, id) {
-            $http.put(myConfig.api + "todos/" + id, scope.todo).then(function(res){
-                scope.todo = res['data'];
-                scope.text = scope.todo.text;
-            }, function(){
+            $http.put(myConfig.api + "messages/" + id, scope.message).then(function(res){
 
+            }, function(){
+                alert("call failed", res);
             });
         }
     }
