--- a/app/assets/templates/edit.html
+++ b/app/assets/templates/edit.html
@@ -1,7 +1,6 @@
 <div>
-        <input type="textarea" ng-model="todo.text">
-        <button  ng-click="edit()"> Edit </button>
-</form>
- {{text}}
-    {{todo}}
+    <form>
+        <input type="textarea" ng-model="message.text">
+        <button ng-click="edit()"> Edit</button>
+    </form>
 </div>
