--- a/app/assets/templates/main_chat.html
+++ b/app/assets/templates/main_chat.html
@@ -1,12 +1,14 @@
 
-Main Chat
 
-<div ng-repeat="message in allMessages">
- <span>{{message.text}}| {{message.created_at | date:'medium'}}| {{message.user_id}}</span>
-
+<h1>Welcome to the chat buddy! say something :)</h1>
+<div class="messages-container">
+    <div ng-repeat="message in allMessages">
+     <span class="user">user #{{message.user_id}}</span> | <span class="message-text">{{message.text}}</span>| <span class="message-date">{{message.created_at | date:'medium'}}</span>
+    </div>
 </div>
 
+
 <form ng-controller="NewCtrl">
-    <span>Current User {{currentUser}}</span><input type="text" ng-model="newMessage.text">
-    <button ng-click="submitNewMessage()">Submit</button>
+    <span>You are user #{{currentUser}}</span><input type="text" ng-model="newMessage.text">
+    <button ng-click="submitNewMessage()">Send</button>
 </form>
